# browserpilot

./: .gitignore  LICENSE  README.md  bp.py  example.py  examples.py  gpt_selenium_example.py  pyproject.toml  readme.md  requirements.txt  run_studio.py  selenium_extract.py
agents/: gpt_selenium_agent.py
agents/compilers/: instruction_compiler.py
browserpilot/: studio.py
browserpilot/agents/: __init__.py  gpt_selenium_agent.py
browserpilot/agents/compilers/: goal_compiler.py  instruction_compiler.py
browserpilot/agents/memories/: __init__.py
prompts/examples/: ask_llm_trivial_example.yaml  buffalo_wikipedia.json  buffalo_wikipedia.txt  buffalo_wikipedia.yaml  buffalo_wikipedia_ask_llm_to_find_element_example.yaml  github_issue.yaml  instagram.yaml  memory_summarization.yaml  nytimes_click_login.txt  nytimes_click_login.yaml  nytimes_headline_list.yaml  summarization_wikipedia_example.yaml
