[tool.poetry]
name = "browserpilot"
version = "0.2.49"
description = "Natural language browser automation"
authors = ["Andrew Han <handrew11@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
click = "^8.1.3" 
python = "^3.10"
openai = ">0.27, <2.0"
selenium = "^4.8.2"
tqdm = "^4.64.1"
beautifulsoup4 = "^4.11.2"
pyyaml = "^6.0"
llama-index = ">=0.8, <1.0"
setuptools = "^69.0.3"
langchain-community = "^0.0.13"
langchain = "^0.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
